--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,16 @@ dependencies = [
   "uvicorn>=0.30"
 ]
 
+[build-system]
+requires = ["setuptools>=64", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [project.optional-dependencies]
 dev = [
   "pytest>=8.0",
